# LocalFiles

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  lib.rs  main.rs  ops.rs  rar.rs  search.rs  siblings.rs  split.rs  thumbs.rs  watch.rs
src/components/: BatchRenameModal.tsx  ContextMenu.tsx  FileList.tsx  FolderTree.tsx  Modals.tsx  OpsPanel.tsx  PreviewPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabsBar.tsx  Toasts.tsx  TopBar.tsx
src/lib/: actions.ts  apath.ts  backend.ts  fsutil.ts  i18n.ts  rename.ts  tags.ts  terminal.ts  thumbs.ts  types.ts  virtual.ts
src/lib/__tests__/: apath.test.ts  fsutil.test.ts  rename.test.ts  tags.test.ts  terminal.test.ts
src/state/: tabs.ts  ui.ts
