[package]
name = "localfiles"
version = "0.6.1"
description = "LocalFiles — gerenciador de arquivos 100% offline da suíte Local"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalFiles"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Excluir = lixeira do SO, nunca delete permanente (mesmo padrão do LocalImage).
trash = "5"
# Discos/volumes na sidebar (total/livre/removível).
sysinfo = "0.33"
# Busca recursiva paralela (v0.2).
jwalk = "0.8"
# Watcher da pasta atual (atualização ao vivo, v0.2).
notify = "8"
# Miniaturas de imagem pro grid/preview (reusa decoders; mesmo crate do LocalImage).
image = "0.25"
base64 = "0.22"
# Zip inline (v0.5): o MESMO conjunto de crates do LocalZip 0.5.0 — os módulos
# `archive.rs`/`split.rs`/`rar.rs` vieram de lá (ver o cabeçalho de cada um).
# Manter as versões alinhadas com o LocalZip é de propósito: bug achado num app
# se conserta no outro copiando a correção, sem tradução de API no meio.
zip = { version = "2", features = ["aes-crypto", "deflate", "bzip2", "zstd", "time"] }
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
bzip2 = "0.5"
zstd = "0.13"
sevenz-rust2 = "0.21.3"
rars = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
# "Abrir no terminal": acha o exe do LocalTerminal na chave Uninstall, que é a
# mesma fonte que o TaylorHub usa. O NSIS do Tauri não põe o app no PATH, então
# procurar por nome só funcionaria na máquina do desenvolvedor.
winreg = "0.55"
